# GameKit

./: .gitignore  README.md
binding/auto_gen/csharp/: GameKit.cs  GameKitPINVOKE.cs  Platform.cs  PlatformMod.cs  PlatformModPINVOKE.cs  Runtime.cs  RuntimeMod.cs  RuntimeModPINVOKE.cs
binding/auto_gen/wrap/: GameKit_wrap.cxx  Runtime_wrap.cxx  system_Platform_wrap.cxx
binding/interface/: GameKit.i  Preprocess.i  Runtime.i
binding/interface/system/: Platform.i
cmake/csharp/: CMakeLists.txt
cmake/modules/: SrcList.cmake  Var.cmake  WrapList.cmake
src/: GameKit.h  Runtime.cpp  Runtime.h
src/system/: Platform.cpp  Platform.h
tools/: build_csharp.py  common.py  generate_csharp.py
